[GH-278] feat(auth): add RefreshToken
