# src/apps/apiApp/routes/Auth/auth.routes.ts
@@ -1,12 +1,13 @@
 import { NextFunction, Request, Response, Router } from 'express';
 import {
   LoginController,
+  RefreshTokenController,
   RegisterController,
   ValidateMailController
 } from '../../controllers/Auth';
 import container from '../../dependency-injection';
 import { API_PREFIXES } from '../shared';
-import { validateBody, validateReqSchema } from '../shared/middlewares';
+import { auth, validateBody, validateReqSchema } from '../shared/middlewares';
 import {
   loginReqSchema,
   registerReqSchema,
@@ -20,6 +21,9 @@ export const register = (router: Router) => {
   const registerController = container.get(RegisterController.containerId);
   const validateMailController = container.get(
     ValidateMailController.containerId
+  );
+  const refreshTokenController = container.get(
+    RefreshTokenController.containerId
   );
 
   router.post(
@@ -48,6 +52,14 @@ export const register = (router: Router) => {
     validateReqSchema,
     (req: Request, res: Response, next: NextFunction) => {
       validateMailController.run(req, res, next);
+    }
+  );
+
+  router.get(
+    `${prefix}/refresh`,
+    auth,
+    (req: Request, res: Response, next: NextFunction) => {
+      refreshTokenController.run(req, res, next);
     }
   );
 };
